--- a/index.html
+++ b/index.html
@@ -1,163 +1,98 @@
-<!DOCTYPE html>
+
+<!--使用HTML5开发-->
+<!doctype html>
+<html class="no-js">
 <html>
     <head>
-        <title>ToDoList—最简单的待办事项列表</title>
-        <link rel="stylesheet" href="todolist.css">
-    </head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!--自动适应移动屏幕-->
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+        <!--优先使用webkit内核渲染-->
+        <meta name="renderer" content="webkit">
+        <!--不要被百度转码-->
+        <meta http-equiv="Cache-Control" content="no-siteapp"/>
+        <!--以下才是引入amazeui资源-->
+        <link rel="stylesheet" href="assets/css/amazeui.min.css">
+        <link rel="stylesheet" href="assets/css/app.css">
+        <!--引入js的时候要注意，必须先引入jQuery，再引入amazeui，因为这个框架是基于jQuery开发的-->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/amazeui.min.js"></script>
+        <title>折叠式布局下的内容列表、表格</title>
+    </head> 
     <body>
-        <header>
-            <section>
-                <form action="javascript: void(0)" id="form">
-                    <label for="title">ToDoList</label>
-                    <input type="text" id="title" placeholder="添加ToDo" autocomplete="off"/>
-                </form>
-            </section>
-        </header>
-        <section id="section">
-            <h2>正在进行 <span id="todocount"></span></h2>
-            <ol id="todolist" class="demo-box">
-            </ol>
-            <h2>已经完成 <span id="donecount"></span></h2>
-            <ul id="donelist">
-            </ul>
-        </section>
-        
-        <script>
-            var title_ele = document.getElementById("title");
-            var todolist_ele = document.getElementById("todolist");
-            var donelist_ele = document.getElementById("donelist");
-            var section_ele = document.getElementById("section");
-            
-            // 功能1，添加待办事项
-            addEvent(title_ele, "keydown", function(e){
-                var keyCode = e.which || e.keyCode;
-                var obj = {
-                    tag_name : "li",
-                    children : [
-                            {
-                                tag_name : "input",
-                                attributes : {
-                                        type : "checkbox",
-                                        class : "checkbox"
-                                    }
-                            },
-                            {
-                                tag_name : "p",
-                                content : title_ele.value
-                            },
-                            {
-                                tag_name : "a",
-                                attributes : {
-                                        href : "javascript:void(0)"
-                                    },
-                                content : "-"
-                            }]
-                }
-                if(keyCode === 13){
-                    console.log(title_ele.value);
-                    if(title_ele.value === ""){
-                        alert("请输入待办事项内容，再按Enter确认")
-                    }else{
-                        todolist_ele.insertBefore(createEle(obj), todolist_ele.childNodes[0]);
-                        title_ele.value = "";
-                    }
-                }
-            })
-
-            // 功能2，完成待办事项
-            addEvent(todolist_ele, "change", ".checkbox", function(){
-                donelist_ele.insertBefore(this.parentNode, donelist_ele.childNodes[0]);
-            })
-
-            // 功能3，重置已完成事项
-            addEvent(donelist_ele, "change", ".checkbox", function(){
-                todolist_ele.insertBefore(this.parentNode, todolist_ele.childNodes[0]);
-            })
-
-            // 功能4，删除事项
-            addEvent(section_ele, "click", "a", function(){
-                this.parentNode.remove();
-            })
-
-            // 功能5，修改事项内容
-            addEvent(todolist_ele, "click", "p", function(){
-                var insert_html = '<input value="' + this.innerText + '">';
-                this.innerHTML = insert_html;
-                this.children[0].select();
-                addEvent(this.children[0], "blur", function(){
-                    this.parentNode.innerText = this.value;
-                })
-                addEvent(this.children[0], "keydown", function(e){
-                    var keyCode = e.which || e.keyCode;
-                    if(keyCode === 13){
-                        this.parentNode.innerText = this.value;
-                    }
-                })
-            })
-
-
-            // 封装创建元素的函数
-            function createEle(obj){
-                var node = document.createElement(obj.tag_name);
-                if(obj.attributes){
-                    // 若属性存在，则遍历属性添加给node
-                    for(var attr in obj.attributes){
-                        node.setAttribute(attr, obj.attributes[attr]);
-                    }
-                }
-                if(obj.content){
-                    // 若内容存在，则将内容插入节点中
-                    node.innerText = obj.content;
-                }
-                if(obj.children && obj.children.length > 0){
-                    // 若子集存在，则遍历子集，递归调用createEle()
-                    for(var i = 0; i < obj.children.length; i++){
-                        node.appendChild(createEle(obj.children[i]));
-                    }
-                }
-                return node;
-            }
-
-
-            // 封装事件委托和事件监听
-            function addEvent(ele, event_type, cb_or_selector, cb){
-                // 若传入的是4个参数且第三个参数是字符串，说明是添加事件委托
-                if(arguments.length === 4 && typeof cb_or_selector === "string"){
-                    // 添加事件委托，获取事件目标
-                    ele.addEventListener(event_type, function(evt){
-                        var e = evt || event;
-                        var target = e.target || e.srcElement;
-                        // 根据传入的字符串判断选择器类型
-                        switch(cb_or_selector.substr(0, 1)){
-                            case ".":
-                                var selector_type = "className";
-                                var selector_name = cb_or_selector.slice(1);
-                                break;
-                            case "#":
-                                var selector_type = "id";
-                                var selector_name = cb_or_selector.slice(1);
-                                break;
-                            default:
-                                var selector_type = "nodeName";
-                                var selector_name = cb_or_selector.toUpperCase();
-                        }
-                        // 封装事件冒泡逐层向上查找事件目标
-                        while(target !== ele){
-                            // 验证事件目标
-                            if(target[selector_type] === selector_name){
-                                // 使用call改变this指向
-                                cb.call(target, e);
-                                break;
-                            }
-                            target = target.parentNode;
-                        }
-                    })
-                    // 若逻辑只有两种，可以使用 return false
-                    return false;
-                }
-                // 若传入三个参数，说明是添加事件监听
-                ele.addEventListener(event_type, cb_or_selector);
-            }
-        </script>
+        <h1>折叠式卡片布局</h1>
+        <div data-am-widget="accordion" class="am-accordion am-accordion-gapped">
+            <!--这里是表示标题的背景颜色是灰色-->
+            <dl class="am-accordion-item am-active">
+                <dt class="am-accordion-title">卡片1-文字</dt>
+                <!--这里表示这个面板默认是打开状态-->
+                <dd class="am-accordion-bd am-collapse am-in">
+                    <div class="am-accordion-content">
+                    <!--内容在这里写-->
+                    纯属文字
+                    </div>
+                </dd>
+            </dl>
+            <dl class="am-accordion-item">
+                <dt class="am-accordion-title">卡片2-内容列表</dt>
+                <dd class="am-accordion-bd am-collapse">
+                    <!--如果这个折叠式布局里面用到的不是纯属的文件，必须加上一个margin-bottom:-20px削去底部的空白-->
+                    <!--用到内容列表的话，无须加class="am-accordion-content"属性-->
+                    <div style="margin-bottom:-20px">
+                        <div class="am-list-news-bd">
+                        <ul class="am-list">
+                            <li class=" am-list-item-dated">
+                                <a href="##" class="am-list-item-hd">标题1</a>
+                                <span class="am-list-date">2015-05-12</span>
+                            </li>
+                            <li class=" am-list-item-dated">
+                                <a href="##" class="am-list-item-hd">超长超长超长超长超长超长超长超长超长超长超长超长超长超长超长超长超长超长标题2</a>
+                                <span class="am-list-date">2015-05-12</span>
+                            </li>
+                            <li class=" am-list-item-dated">
+                                <a href="##" class="am-list-item-hd">标题3</a>
+                                <span class="am-list-date">2015-05-12</span>
+                            </li>   
+                        </ul>
+                        </div>
+                    </div>
+                </dd>
+            </dl>
+            <dl class="am-accordion-item">
+                <dt class="am-accordion-title">卡片3-表格</dt>
+                <dd class="am-accordion-bd am-collapse ">
+                    <!--am-table-bordered代表表格列与列之间有线划分，am-table-striped代表表格灰白相间-->
+                    <div class="am-accordion-content" style="margin-bottom:-20px">
+                        <table class="am-table am-table-radius am-table-striped">
+                            <thead>
+                                <tr>
+                                    <!--这里与HTML一样，必须设置好每一行的表格宽度-->
+                                    <th width="33%">表头1</th>
+                                    <th width="33%">表头2</th>
+                                    <th>表头3</th>
+                                </tr>
+                             </thead>
+                             <tbody>
+                                <tr>
+                                    <td>内容1</td>
+                                    <td>超长超长超长内容2</td>
+                                    <td>内容3</td>
+                                </tr>
+                                <tr>
+                                    <td>内容1</td>
+                                    <td>超长超长超长超长超长超长超长超长超长超长超长超长超长超长超长超长超长超长内容2</td>
+                                    <td>内容3</td>
+                                </tr>
+                                <tr>
+                                    <td>内容1</td>
+                                    <td>超长超长超长内容2</td>
+                                    <td>内容3</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </dd>
+            </dl>
+        </div>
     </body>
-</html>
