--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <body class="main">
         <h1 style="background-color: cadetblue; color:#ffffff ; margin: 0%; padding: 0%; padding-top:15px; padding-bottom:15px;" align="center" >LINA CHEN'S Septemper</h1>
         <a class="github-fork-ribbon" href="https://github.com/LinaC404" data-ribbon="Fork me on GitHub" title="Fork me on GitHub">Fork me on GitHub</a>
+        <a href="./test.html">text</a>
         <div class="line1">
             <div>
                 <div class="cardBox">
